--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="src/css/estilo.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="responsivo.css">
-    <title>Música para todos - Spotify</title>
+    <title>KingDomfy - Música para todos</title>
     <link rel="icon" href="src/imagens/favicon.png">
   </head>
 
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
           <a href="projeto-spotify.html" class="navbar-brand">
-          <img src="src/imagens/spotify.svg" width="142">
+          <img src="src/imagens/King.png" width="142">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
