--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
           <a href="projeto-spotify.html" class="navbar-brand">
-          <img src="src/imagens/King.png" width="142">
+          <img src="src/imagens/KingDomfy.png" width="142">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
