--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header> 
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
-          <a href="projeto-spotify.html" class="navbar-brand">
+          <a href="" class="navbar-brand">
           <img src="src/imagens/KingDomfy.png" width="142">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
