--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, 
+        initial-scale=1, shrink-to-fit=no">
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
+  <link rel="stylesheet" type='text/css' 
+        href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilo.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="responsivo.css">
-    <title>KingDomfy - Música para todos</title>
-    <link rel="icon" href="src/imagens/favicon.png">
-  </head>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="src/css/estilo.css">
+  <link rel="stylesheet" href="responsivo.css">
+  
+  <title>KingDomfy - Música para todos</title>
+  <link rel="icon" href="src/imagens/favicon.png">
+</head>
 
-  <body>
-    <header> 
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
-        <div class="container">
-          <a href="" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100">
-          </a>
+<body>
+  <header> 
+    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+      <div class="container">
+        <a href="" class="navbar-brand">
+          <img src="src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+        </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
         </button>
@@ -41,7 +43,7 @@
             <li class="nav-item">
               <a href="" class="nav-link">Baixar</a>
             </li>
-            <li class="nav-item divisor"></li>
+            <li class="nav-item divisor"></li> 
             <li class="nav-item">
               <a href="" class="nav-link">Inscrever-se</a>
             </li>
@@ -50,160 +52,165 @@
             </li>
           </ul>
         </div>
-        </div>
-      </nav>
-    </header> 
+      </div>
+    </nav>
+  </header> 
 
-    <section id="home" class="d-flex"> 
-      <div class="container align-self-center">
-        <div class="row">
-          <div class="col-md-12 capa">
-            <div id="carousel-spotify" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <h1>Música para todos</h1>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      Spotify Free
-                    </a>
-                    <a href="" class="btn btn-lg btn-custom btn-branco">
-                      Spotify Premium
-                    </a>
-                </div>
-                <div class="carousel-item">
-                  <h1>As melhores rádios</h1>
-                    <a href="" class="btn btn-lg btn-custom btn-branco">
-                    <i class="fas fa-music"></i> Ouça agora
-                    </a>
-                </div>
-                <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
-                  <i class="fas fa-angle-left fa-4x"></i>
+  <section id="home" class="d-flex"> 
+    <div class="container align-self-center">
+      <div class="row">
+        <div class="col-md-12 capa">
+          <div id="carousel-kingdomfy" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <h1>Música para todos</h1>
+                <a href="" class="btn btn-lg btn-custom btn-roxo">
+                  KingDomfy Free
                 </a>
-                <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
-                  <i class="fas fa-angle-right fa-4x"></i>
+                <a href="" class="btn btn-lg btn-custom btn-branco">
+                  KingDomfy Premium
                 </a>
               </div>
+              <div class="carousel-item">
+                <h1>As melhores rádios</h1>
+                <a href="" class="btn btn-lg btn-custom btn-branco">
+                  <i class="fas fa-music"></i> Ouça agora
+                </a>
+              </div>
+              <a href="#carousel-kingdomfy" class="carousel-control-prev" data-slide="prev">
+                <i class="fas fa-angle-left fa-4x"></i>
+              </a>
+              <a href="#carousel-kingdomfy" class="carousel-control-next" data-slide="next">
+                <i class="fas fa-angle-right fa-4x"></i>
+              </a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <section id="servicos" class="caixa"> 
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row albuns">
-              <div class="col-md-6">
-                <img src="src/imagens/img1.jpg" class="img-fluid d-none d-md-block">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/img2.jpg" class="img-fluid d-none d-md-block">
-              </div>
-            </div>
-            <div class="row albuns">
-              <div class="col-md-6">
-                <img src="src/imagens/img3.jpg" class="img-fluid d-none d-md-block">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/img4.jpg" class="img-fluid d-none d-md-block">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <h2>O que o Spotify tem?</h2>
-            <h3>Músicas</h3>
-            <p>
-              O spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+    </div>
+  </section>
 
-            <h3>Playlistis</h3>
-            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
-            <h3>Novos Lançamentos</h3>
-            <p>Escute os novos lançamentos de singles e albuns da semana e vaja o que está bombando no Top 50.</p>
+  <section id="servicos" class="caixa"> 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="src/imagens/img1.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Album de música 1">
+            </div>
+            <div class="col-md-6">
+              <img src="src/imagens/img2.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Album de música 2">
+            </div>
           </div>
-        </div>
-      </div>
-    </section> 
-    <section id="recursos" class="caixa">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Fácil</h2>
-            <h3>Buscar</h3>
-            <p>Já sabe o que escutar? É só procurar e apertar o play.</p>
-            <h3>Navegar</h3>
-            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
-            <h3>Descobrir</h3>
-            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das rádios.</p>
-          </div>
-          <div class="col-md-8">
-            <div class="row rotacionar">
-              <div class="col-md-6">
-                <img src="src/imagens/iphone1.png" class="img-fluid d-none d-md-block">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/iphone2.png" class="img-fluid d-none d-md-block ">
-              </div>
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="src/imagens/img3.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Album de música 3">
+            </div>
+            <div class="col-md-6">
+              <img src="src/imagens/img4.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Album de música 4">
             </div>
           </div>
         </div>
+        <div class="col-md-6">
+          <h2>O que o KingDomfy tem?</h2>
+          <h3>Músicas</h3>
+          <p>
+            O kingdomfy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.
+          </p>
+          <h3>Playlistis</h3>
+          <p>No KingDomfy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+          <h3>Novos Lançamentos</h3>
+          <p>Escute os novos lançamentos de singles e albuns da semana e vaja o que está bombando no Top 50.</p>
+        </div>
       </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <h4>company</h4>
-            <ul class="navbar-nav">
-              <li><a href="">Sobre</a></li>
-              <li><a href="">Empregos</a></li>
-              <li><a href="">Imprensa</a></li>
-              <li><a href="">Novidades</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2">
-            <h4>comunidades</h4>
-            <ul class="navbar-nav">
-              <li><a href="">Artistas</a></li>
-              <li><a href="">Desenvolvedores</a></li>
-              <li><a href="">Marcas</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2">
-            <h4>site feito com:</h4>
-            <ul id="media">
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco" width="80px" height="80px"/>
-              </li>
-              <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco" width="80px" height="80px"/>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <ul>
-              <li>
-                <a href="">
-                  <img src="src/imagens/facebook.png">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img src="src/imagens/twitter.png">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img src="src/imagens/instagram.png">
-                </a>
-              </li>
-            </ul>
+    </div>
+  </section>
+    
+  <section id="recursos" class="caixa">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Fácil</h2>
+          <h3>Buscar</h3>
+          <p>Já sabe o que escutar? É só procurar e apertar o play.</p>
+          <h3>Navegar</h3>
+          <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+          <h3>Descobrir</h3>
+          <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das rádios.</p>
+        </div>
+        <div class="col-md-8">
+          <div class="row rotacionar">
+            <div class="col-md-6">
+              <img src="src/imagens/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="App KingDomfy na tela do iPhone 1">
+            </div>
+            <div class="col-md-6">
+              <img src="src/imagens/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="App KingDomfy na tela do iPhone 2">
+            </div>
           </div>
         </div>
       </div>
-    </footer> 
+    </div>
+  </section>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <h4>company</h4>
+          <ul class="navbar-nav">
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Empregos</a></li>
+            <li><a href="">Imprensa</a></li>
+            <li><a href="">Novidades</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>comunidades</h4>
+          <ul class="navbar-nav">
+            <li><a href="">Artistas</a></li>
+            <li><a href="">Desenvolvedores</a></li>
+            <li><a href="">Marcas</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 offset-md-2"> 
+          <h4>site feito com:</h4>
+          <ul id="media">
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco" width="80px" height="80px" alt="Ícone HTML5"/>
+            </li>
+            <li>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco" width="80px" height="80px" alt="Ícone CSS3"/>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li>
+              <a href="">
+                <img src="src/imagens/facebook.png" alt="Link para Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="src/imagens/twitter.png" alt="Link para Twitter">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="src/imagens/instagram.png" alt="Link para Instagram">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer> 
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
+          integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
+          integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
