--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="src/css/estilo.css">
+  <link rel="stylesheet" type="text/css" href="src/css/estilos.css">
   <link rel="stylesheet" href="responsivo.css">
   
   <title>KingDomfy - Música para todos</title>
