--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="responsivo.css">
   
   <title>KingDomfy - Música para todos</title>
-  <link rel="icon" href="src/imagens/favicon.png">
+  <link rel="icon" href="src/Images/favicon.png">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
       <div class="container">
         <a href="" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
+          <img src="src/Images/KingDomfy.png" width="100" alt="Logo KingDomfy">
         </a>
         
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal"
@@ -100,18 +100,18 @@
           <div class="col-md-6">
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/imagens/img1.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Rock Collection'">
+                <img src="src/Images/img1.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Rock Collection'">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/img2.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Pop Hits'">
+                <img src="src/Images/img2.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Pop Hits'">
               </div>
             </div>
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/imagens/img3.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Indie Vibes'">
+                <img src="src/Images/img3.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Indie Vibes'">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/img4.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Classic Jazz'">
+                <img src="src/Images/img4.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Classic Jazz'">
               </div>
             </div>
           </div>
@@ -145,10 +145,10 @@
           <div class="col-md-8">
             <div class="row rotacionar">
               <div class="col-md-6">
-                <img src="src/imagens/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Captura de tela do aplicativo KingDomfy no iPhone">
+                <img src="src/Images/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Captura de tela do aplicativo KingDomfy no iPhone">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Segunda captura de tela do aplicativo KingDomfy no iPhone">
+                <img src="src/Images/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Segunda captura de tela do aplicativo KingDomfy no iPhone">
               </div>
             </div>
           </div>
@@ -196,17 +196,17 @@
           <ul>
             <li>
               <a href="" aria-label="Visite nossa página no Facebook">
-                <img src="src/imagens/facebook.png" alt="" role="presentation">
+                <img src="src/Images/facebook.png" alt="" role="presentation">
               </a>
             </li>
             <li>
               <a href="" aria-label="Visite nosso perfil no Twitter">
-                <img src="src/imagens/twitter.png" alt="" role="presentation">
+                <img src="src/Images/twitter.png" alt="" role="presentation">
               </a>
             </li>
             <li>
               <a href="" aria-label="Visite nosso perfil no Instagram">
-                <img src="src/imagens/instagram.png" alt="" role="presentation">
+                <img src="src/Images/instagram.png" alt="" role="presentation">
               </a>
             </li>
           </ul>
