--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
   <meta name="viewport" content="width=device-width, 
         initial-scale=1, shrink-to-fit=no">
   
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
-        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="Vendor/bootstrap/css/Bootstrap.min.css">
+  <link rel="stylesheet" href="Vendor/Fontawesome/css/all.min.css">
 
   <link rel="stylesheet" type='text/css' 
         href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="src/css/estilos.css">
-  <link rel="stylesheet" href="responsivo.css">
+  <link rel="stylesheet" href="Src/Css/reset.css"> 
+  <link rel="stylesheet" type="text/css" href="Src/Css/estilos.css">
+  <link rel="stylesheet" href="Src/Css/responsivo.css">
   
   <title>KingDomfy - Música para todos</title>
-  <link rel="icon" href="src/Images/favicon.png">
+  <link rel="icon" href="Src/Images/favicon.png">
 </head>
 
 <body>
@@ -27,7 +24,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
       <div class="container">
         <a href="" class="navbar-brand">
-          <img src="src/Images/KingDomfy.png" width="100" alt="Logo KingDomfy">
+          <img src="Src/Images/KingDomfy.png" width="100" alt="Logo KingDomfy">
         </a>
         
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal"
@@ -100,18 +97,18 @@
           <div class="col-md-6">
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/Images/img1.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Rock Collection'">
+                <img src="Src/Images/img1.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Rock Collection'">
               </div>
               <div class="col-md-6">
-                <img src="src/Images/img2.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Pop Hits'">
+                <img src="Src/Images/img2.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Pop Hits'">
               </div>
             </div>
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/Images/img3.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Indie Vibes'">
+                <img src="Src/Images/img3.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Indie Vibes'">
               </div>
               <div class="col-md-6">
-                <img src="src/Images/img4.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Classic Jazz'">
+                <img src="Src/Images/img4.jpg" class="img-fluid d-none d-md-block" loading="lazy" alt="Capa do álbum 'Classic Jazz'">
               </div>
             </div>
           </div>
@@ -145,10 +142,10 @@
           <div class="col-md-8">
             <div class="row rotacionar">
               <div class="col-md-6">
-                <img src="src/Images/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Captura de tela do aplicativo KingDomfy no iPhone">
+                <img src="Src/Images/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Captura de tela do aplicativo KingDomfy no iPhone">
               </div>
               <div class="col-md-6">
-                <img src="src/Images/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Segunda captura de tela do aplicativo KingDomfy no iPhone">
+                <img src="Src/Images/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Segunda captura de tela do aplicativo KingDomfy no iPhone">
               </div>
             </div>
           </div>
@@ -181,6 +178,7 @@
             </ul>
           </nav>
         </div>
+        
         <div class="col-md-2 offset-md-2"> 
           <h4>site feito com:</h4>
           <ul id="media">
@@ -196,17 +194,17 @@
           <ul>
             <li>
               <a href="" aria-label="Visite nossa página no Facebook">
-                <img src="src/Images/facebook.png" alt="" role="presentation">
+                <img src="Src/Images/facebook.png" alt="" role="presentation">
               </a>
             </li>
             <li>
               <a href="" aria-label="Visite nosso perfil no Twitter">
-                <img src="src/Images/twitter.png" alt="" role="presentation">
+                <img src="Src/Images/twitter.png" alt="" role="presentation">
               </a>
             </li>
             <li>
               <a href="" aria-label="Visite nosso perfil no Instagram">
-                <img src="src/Images/instagram.png" alt="" role="presentation">
+                <img src="Src/Images/instagram.png" alt="" role="presentation">
               </a>
             </li>
           </ul>
@@ -215,11 +213,10 @@
     </div>
   </footer> 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
-          integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
-          integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="Vendor/JQuery/JQuery.min.Js"></script>
+  <script src="Vendor/Popper/Popper.min.Js"></script>
+  <script src="Vendor/Bootstrap/js/Bootstrap.min.js"></script>
+
+  <script src="Src/Js/app.js" defer></script>
 </body>
 </html>
