--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, 
         initial-scale=1, shrink-to-fit=no">
-  
-  <link rel="stylesheet" href="Vendor/bootstrap/css/Bootstrap.min.css">
-  <link rel="stylesheet" href="Vendor/Fontawesome/css/all.min.css">
-
+  <link rel="stylesheet" href="Vendor/Bootstrap/Css/Bootstrap.min.css">
+  <link rel="stylesheet" href="Vendor/Fontawesome/Css/all.min.css">
   <link rel="stylesheet" type='text/css' 
         href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-
   <link rel="stylesheet" href="Src/Css/reset.css"> 
   <link rel="stylesheet" type="text/css" href="Src/Css/estilos.css">
   <link rel="stylesheet" href="Src/Css/responsivo.css">
   
   <title>KingDomfy - Música para todos</title>
+
   <link rel="icon" href="Src/Images/favicon.png">
 </head>
 
@@ -145,9 +143,7 @@
                 <img src="Src/Images/iphone1.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Captura de tela do aplicativo KingDomfy no iPhone">
               </div>
               <div class="col-md-6">
-                <img src="Src/Images/iphone2.png" class="img-fluid d-none d-md-block" loading="lazy" alt="Segunda captura de tela do aplicativo KingDomfy no iPhone">
-              </div>
-            </div>
+                <img src="Src/Images/iphone2.png" class="img-fluid d-none d-md-block">
           </div>
         </div>
       </div>
@@ -217,6 +213,6 @@
   <script src="Vendor/Popper/Popper.min.Js"></script>
   <script src="Vendor/Bootstrap/js/Bootstrap.min.js"></script>
 
-  <script src="Src/Js/app.js" defer></script>
+  <script src="Src/Js/app.js" defer></script> 
 </body>
 </html>
