--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <div class="carousel-item active">
                   <h1>Música para todos</h1>
                     <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      Spotify Free
+                      KingDomfy Free
                     </a>
                     <a href="" class="btn btn-lg btn-custom btn-branco">
-                      Spotify Premium
+                      KingDomfy Premium
                     </a>
                 </div>
                 <div class="carousel-item">
@@ -75,10 +75,10 @@
                     <i class="fas fa-music"></i> Ouça agora
                     </a>
                 </div>
-                <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+                <a href="#carousel-kingdomfy" class="carousel-control-prev" data-slide="prev">
                   <i class="fas fa-angle-left fa-4x"></i>
                 </a>
-                <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+                <a href="#carousel-kingdomfy" class="carousel-control-next" data-slide="next">
                   <i class="fas fa-angle-right fa-4x"></i>
                 </a>
               </div>
@@ -109,13 +109,13 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h2>O que o Spotify tem?</h2>
+            <h2>O que o KingDomfy tem?</h2>
             <h3>Músicas</h3>
             <p>
-              O spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+              O KingDomfy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
 
             <h3>Playlistis</h3>
-            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+            <p>No KingDomfy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
             <h3>Novos Lançamentos</h3>
             <p>Escute os novos lançamentos de singles e albuns da semana e vaja o que está bombando no Top 50.</p>
           </div>
