--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="Src/Css/estilos.css">
-    <link rel="stylesheet" href="Src/Css/reset.css">
-    <link rel="stylesheet" href="Src/Css/responsivo.css">
+    <link rel="stylesheet" type="text/css" href="src/css/estilos.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
     <title>Música para todos - Spotify</title>
-    <link rel="icon" href="Src/Images/favicon.png">
+    <link rel="icon" href="src/imagens/favicon.png">
   </head>
 
   <body>
