--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
           <a href="" class="navbar-brand">
-          <img src="Src/Images/KingDomfy.png" width="100">
+          <img src="src/imagens/KingDomfy.png" width="100">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
@@ -93,18 +93,18 @@
           <div class="col-md-6">
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="Src/Images/img1.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img1.jpg" class="img-fluid d-none d-md-block">
               </div>
               <div class="col-md-6">
-                <img src="Src/Images/img2.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img2.jpg" class="img-fluid d-none d-md-block">
               </div>
             </div>
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="Src/Images/img3.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img3.jpg" class="img-fluid d-none d-md-block">
               </div>
               <div class="col-md-6">
-                <img src="Src/Images/img4.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img4.jpg" class="img-fluid d-none d-md-block">
               </div>
             </div>
           </div>
@@ -137,10 +137,10 @@
           <div class="col-md-8">
             <div class="row rotacionar">
               <div class="col-md-6">
-                <img src="Src/Images/iphone1.png" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/iphone1.png" class="img-fluid d-none d-md-block">
               </div>
               <div class="col-md-6">
-                <img src="Src/Images/iphone2.png" class="img-fluid d-none d-md-block ">
+                <img src="src/imagens/iphone2.png" class="img-fluid d-none d-md-block ">
               </div>
             </div>
           </div>
@@ -183,17 +183,17 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="Src/Images/facebook.png">
+                  <img src="src/imagens/facebook.png">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="Src/Images/twitter.png">
+                  <img src="src/imagens/twitter.png">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="Src/Images/instagram.png">
+                  <img src="src/imagens/instagram.png">
                 </a>
               </li>
             </ul>
@@ -202,10 +202,10 @@
       </div>
     </footer> 
 
-    <script src="Vendor/JQuery/JQuery.min.Js"></script>
-    <script src="Vendor/Popper/Popper.min.Js"></script>
-    <script src="Vendor/Bootstrap/Js/bootstrap.min.js"></script>
-    <script src="Src/Js/App.Js" defer></script>
+    <script src="vendor/jquery/jquery.min.js.Js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="src/js/app.js" defer></script>
 
   </body>
 </html>
