--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </footer> 
 
-    <script src="vendor/jquery/jquery.min.js.Js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="src/js/app.js" defer></script>
