--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
           <div class="col-md-6">
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/imagens/img1.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img1.jpg" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/img2.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img2.jpg" class="img-fluid">
               </div>
             </div>
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="src/imagens/img3.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img3.jpg" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/img4.jpg" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/img4.jpg" class="img-fluid">
               </div>
             </div>
           </div>
@@ -136,10 +136,10 @@
           <div class="col-md-8">
             <div class="row rotacionar">
               <div class="col-md-6">
-                <img src="src/imagens/iphone1.png" class="img-fluid d-none d-md-block">
+                <img src="src/imagens/iphone1.png" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/iphone2.png" class="img-fluid d-none d-md-block ">
+                <img src="src/imagens/iphone2.png" class="img-fluid">
               </div>
             </div>
           </div>
