--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-lg-3 col-md-6">
             <h4>company</h4>
             <ul class="navbar-nav">
               <li><a href="">Sobre</a></li>
@@ -159,7 +159,7 @@
               <li><a href="">Novidades</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-3 col-md-6">
             <h4>comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="">Artistas</a></li>
@@ -167,7 +167,7 @@
               <li><a href="">Marcas</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-3 col-md-6">
             <h4>site feito com:</h4>
             <ul id="media">
               <li>
@@ -178,7 +178,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-3 col-md-6">
             <ul>
               <li>
                 <a href="">
