--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
               <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco" width="80px" height="80px"/>
               </li>
+               <li>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco" width="80px" height="80px" />
+              </li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-6">
