--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-md-auto">
             <h4>company</h4>
             <ul class="navbar-nav">
               <li><a href="">Sobre</a></li>
@@ -159,7 +159,7 @@
               <li><a href="">Novidades</a></li>
             </ul>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-md-auto">
             <h4>comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="">Artistas</a></li>
@@ -167,35 +167,54 @@
               <li><a href="">Marcas</a></li>
             </ul>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-md-auto">
+            <h4>Links úteis</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Suporte</a></li>
+              <li><a href="">Player da Web</a></li>
+              <li><a href="">Aplicativo móvel grátis</a></li>
+            </ul>
+          </div>
+          <div class="col-md-auto">
             <h4>site feito com:</h4>
             <ul id="media">
               <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco" width="80px" height="80px"/>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
               </li>
               <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco" width="80px" height="80px"/>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" />
               </li>
                <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco" width="80px" height="80px" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" />
               </li>
             </ul>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <ul>
+          <div class="col-md-auto">
+            <h4>site feito por:</h4>
+            <ul class="navbar-nav">
+              <li>
+                <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
+                  DomisDev
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-auto ml-auto">
+            <h4>Redes Sociais:</h4>
+            <ul class="social-media-icons">
               <li>
                 <a href="">
-                  <img src="src/imagens/facebook.png">
+                  <img src="src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/twitter.png">
+                  <img src="src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/instagram.png">
+                  <img src="src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
             </ul>
