--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilos.css">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/responsivo.css">
-    <title>Música para todos - Spotify</title>
+    <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
+    <title>KingDomfy - Música para todos </title>
     <link rel="icon" href="src/imagens/favicon.png">
   </head>
 
