--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
-    <title>KingDomfy - Música para todos </title>
+    <title>KingDomfy - Música para todos</title>
     <link rel="icon" href="src/imagens/favicon.png">
   </head>
 
@@ -148,7 +148,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-auto">
+          <div class="col-lg-auto mb-4">
             <h4>company</h4>
             <ul class="navbar-nav">
               <li><a href="">Sobre</a></li>
@@ -157,7 +157,7 @@
               <li><a href="">Novidades</a></li>
             </ul>
           </div>
-          <div class="col-md-auto">
+          <div class="col-lg-auto mb-4">
             <h4>comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="">Artistas</a></li>
@@ -165,7 +165,7 @@
               <li><a href="">Marcas</a></li>
             </ul>
           </div>
-          <div class="col-md-auto">
+          <div class="col-lg-auto mb-4">
             <h4>Links úteis</h4>
             <ul class="navbar-nav">
               <li><a href="">Suporte</a></li>
@@ -173,7 +173,7 @@
               <li><a href="">Aplicativo móvel grátis</a></li>
             </ul>
           </div>
-          <div class="col-md-auto">
+          <div class="col-lg-auto mb-4">
             <h4>site feito com:</h4>
             <ul id="media">
               <li>
@@ -187,7 +187,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-auto">
+          <div class="col-lg-auto mb-4">
             <h4>site feito por:</h4>
             <ul class="navbar-nav">
               <li>
@@ -197,7 +197,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-auto ml-auto">
+          <div class="col-lg-auto mb-4 ml-lg-auto">
             <h4>Redes Sociais:</h4>
             <ul class="social-media-icons">
               <li>
