--- a/baixar.html
+++ b/baixar.html
@@ -13,7 +13,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
-    <title>KingDomfy - Música para todos</title>
+    <title>KingDomfy - Baixar</title>
     <link rel="icon" href="src/imagens/favicon.png">
   </head>
 
@@ -51,98 +51,18 @@
       </nav>
     </header> 
 
-    <section id="home" class="d-flex"> 
-      <div class="container align-self-center">
-        <div class="row">
-          <div class="col-md-12 capa">
-            <div id="carousel-kingdomfy" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <h1>Música para todos</h1>
-                    <a href="inscrever-se.html" class="btn btn-lg btn-custom btn-roxo">
-                      KingDomfy Free
-                    </a>
-                    <a href="premium.html" class="btn btn-lg btn-custom btn-branco">
-                      KingDomfy Premium
+    <section id="baixar" class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Baixar KingDomfy</h2>
+                    <p>Leve suas músicas para todo lugar. Baixe o KingDomfy no seu celular ou computador.</p>
+                    <a href="" class="btn btn-lg btn-custom btn-roxo">
+                      BAIXAR
                     </a>
                 </div>
-                <div class="carousel-item">
-                  <h1>As melhores rádios</h1>
-                    <a href="player-da-web.html" class="btn btn-lg btn-custom btn-branco">
-                    <i class="fas fa-music"></i> Ouça agora
-                    </a>
-                </div>
-                <a href="#carousel-kingdomfy" class="carousel-control-prev" data-slide="prev">
-                  <i class="fas fa-angle-left fa-4x"></i>
-                </a>
-                <a href="#carousel-kingdomfy" class="carousel-control-next" data-slide="next">
-                  <i class="fas fa-angle-right fa-4x"></i>
-                </a>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-    </section>
-    <section id="servicos" class="caixa"> 
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row albuns">
-              <div class="col-md-6">
-                <img src="src/imagens/img1.jpg" class="img-fluid">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/img2.jpg" class="img-fluid">
-              </div>
-            </div>
-            <div class="row albuns">
-              <div class="col-md-6">
-                <img src="src/imagens/img3.jpg" class="img-fluid">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/img4.jpg" class="img-fluid">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <h2>O que o KingDomfy tem?</h2>
-            <h3>Músicas</h3>
-            <p>
-              O KingDomfy tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
-
-            <h3>Playlistis</h3>
-            <p>No KingDomfy você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
-            <h3>Novos Lançamentos</h3>
-            <p>Escute os novos lançamentos de singles e albuns da semana e vaja o que está bombando no Top 50.</p>
-          </div>
-        </div>
-      </div>
-    </section> 
-    <section id="recursos" class="caixa">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Fácil</h2>
-            <h3>Buscar</h3>
-            <p>Já sabe o que escutar? É só procurar e apertar o play.</p>
-            <h3>Navegar</h3>
-            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
-            <h3>Descobrir</h3>
-            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das rádios.</p>
-          </div>
-          <div class="col-md-8">
-            <div class="row rotacionar">
-              <div class="col-md-6">
-                <img src="src/imagens/iphone1.png" class="img-fluid">
-              </div>
-              <div class="col-md-6">
-                <img src="src/imagens/iphone2.png" class="img-fluid">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <footer>
