--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="premium.html" class="nav-link">Premium</a>
+              <a href="pages/premium.html" class="nav-link">Premium</a>
             </li>
             <li class="nav-item">
-              <a href="ajuda.html" class="nav-link">Ajuda</a>
+              <a href="pages/ajuda.html" class="nav-link">Ajuda</a>
             </li>
             <li class="nav-item">
-              <a href="baixar.html" class="nav-link">Baixar</a>
+              <a href="pages/baixar.html" class="nav-link">Baixar</a>
             </li>
             <li class="nav-item divisor"></li>
             <li class="nav-item">
-              <a href="inscrever-se.html" class="nav-link">Inscrever-se</a>
+              <a href="pages/inscrever-se.html" class="nav-link">Inscrever-se</a>
             </li>
             <li class="nav-item">
-              <a href="entrar.html" class="nav-link">Entrar</a>
+              <a href="pages/entrar.html" class="nav-link">Entrar</a>
             </li>
           </ul>
         </div>
@@ -59,16 +59,16 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <h1>Música para todos</h1>
-                    <a href="inscrever-se.html" class="btn btn-lg btn-custom btn-roxo">
+                    <a href="pages/inscrever-se.html" class="btn btn-lg btn-custom btn-roxo">
                       KingDomfy Free
                     </a>
-                    <a href="premium.html" class="btn btn-lg btn-custom btn-branco">
+                    <a href="pages/premium.html" class="btn btn-lg btn-custom btn-branco">
                       KingDomfy Premium
                     </a>
                 </div>
                 <div class="carousel-item">
                   <h1>As melhores rádios</h1>
-                    <a href="player-da-web.html" class="btn btn-lg btn-custom btn-branco">
+                    <a href="pages/player-da-web.html" class="btn btn-lg btn-custom btn-branco">
                     <i class="fas fa-music"></i> Ouça agora
                     </a>
                 </div>
@@ -101,7 +101,7 @@
                 <img src="src/imagens/img3.jpg" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="src/imagens/img4.jpg" class="img-fluid">
+                <img src="src/imagens/img4.jpg" class_="img-fluid">
               </div>
             </div>
           </div>
@@ -151,26 +151,26 @@
           <div class="col-lg-auto mb-4">
             <h4>company</h4>
             <ul class="navbar-nav">
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="empregos.html">Empregos</a></li>
-              <li><a href="imprensa.html">Imprensa</a></li>
-              <li><a href="novidades.html">Novidades</a></li>
+              <li><a href="pages/sobre.html">Sobre</a></li>
+              <li><a href="pages/empregos.html">Empregos</a></li>
+              <li><a href="pages/imprensa.html">Imprensa</a></li>
+              <li><a href="pages/novidades.html">Novidades</a></li>
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
             <h4>comunidades</h4>
             <ul class="navbar-nav">
-              <li><a href="artistas.html">Artistas</a></li>
-              <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
-              <li><a href="marcas.html">Marcas</a></li>
+              <li><a href="pages/artistas.html">Artistas</a></li>
+              <li><a href="pages/desenvolvedores.html">Desenvolvedores</a></li>
+              <li><a href="pages/marcas.html">Marcas</a></li>
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
             <h4>Links úteis</h4>
             <ul class="navbar-nav">
-              <li><a href="suporte.html">Suporte</a></li>
-              <li><a href="player-da-web.html">Player da Web</a></li>
-              <li><a href="aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
+              <li><a href="pages/suporte.html">Suporte</a></li>
+              <li><a href="pages/player-da-web.html">Player da Web</a></li>
+              <li><a href="pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
@@ -180,7 +180,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
               </li>
               <li>
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" />
+                <img src="https/cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" />
               </li>
                <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" />
