--- a/pages/aplicativo-movel-gratis.html
+++ b/pages/aplicativo-movel-gratis.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
 
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
+    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Aplicativo Móvel Grátis</title>
-    <link rel="icon" href="src/imagens/favicon.png">
+    <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
   <body>
     <header> 
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
-          <a href="index.html" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100">
+          <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
@@ -122,17 +122,17 @@
             <ul class="social-media-icons">
               <li>
                 <a href="">
-                  <img src="src/imagens/facebook.png" class="social-icon">
+                  <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/twitter.png" class="social-icon">
+                  <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/instagram.png" class="social-icon">
+                  <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
             </ul>
@@ -140,9 +140,9 @@
         </div>
       </div>
     </footer>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="src/js/app.js" defer></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
