--- a/pages/empregos.html
+++ b/pages/empregos.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
 
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
-    <title>KingDomfy - Imprensa</title>
-    <link rel="icon" href="src/imagens/favicon.png">
+    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
+    <title>KingDomfy - Empregos</title>
+    <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
   <body>
     <header> 
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
-          <a href="index.html" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100">
+          <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
@@ -51,12 +51,15 @@
       </nav>
     </header> 
 
-    <section id="imprensa" class="caixa">
+    <section id="empregos" class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Imprensa</h2>
-                    <p>Para consultas de imprensa, entre em contato com nossa equipe de comunicação.</p>
+                    <h2>Trabalhe Conosco</h2>
+                    <p>Faça parte da nossa equipe e ajude a construir o futuro da música.</p>
+                    <a href="" class="btn btn-lg btn-custom btn-roxo">
+                      VER VAGAS
+                    </a>
                 </div>
             </div>
         </div>
@@ -119,17 +122,17 @@
             <ul class="social-media-icons">
               <li>
                 <a href="">
-                  <img src="src/imagens/facebook.png" class="social-icon">
+                  <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/twitter.png" class="social-icon">
+                  <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/instagram.png" class="social-icon">
+                  <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
             </ul>
@@ -137,9 +140,9 @@
         </div>
       </div>
     </footer>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="src/js/app.js" defer></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
