--- a/pages/entrar.html
+++ b/pages/entrar.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
 
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
-    <title>KingDomfy - Novidades</title>
-    <link rel="icon" href="src/imagens/favicon.png">
+    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
+    <title>KingDomfy - Entrar</title>
+    <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
   <body>
     <header> 
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
-          <a href="index.html" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100">
+          <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
@@ -51,12 +51,22 @@
       </nav>
     </header> 
 
-    <section id="novidades" class="caixa">
+    <section id="entrar" class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Novidades</h2>
-                    <p>Fique por dentro das últimas notícias e atualizações do KingDomfy.</p>
+                    <h2>Para continuar, entre no KingDomfy.</h2>
+                    <form>
+                      <div class="form-group">
+                        <label for="email">Endereço de e-mail ou nome de usuário</label>
+                        <input type="email" class="form-control" id="email" placeholder="Endereço de e-mail ou nome de usuário">
+                      </div>
+                      <div class="form-group">
+                        <label for="senha">Senha</label>
+                        <input type="password" class="form-control" id="senha" placeholder="Senha">
+                      </div>
+                      <button type="submit" class="btn btn-primary">Entrar</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -119,17 +129,17 @@
             <ul class="social-media-icons">
               <li>
                 <a href="">
-                  <img src="src/imagens/facebook.png" class="social-icon">
+                  <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/twitter.png" class="social-icon">
+                  <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/instagram.png" class="social-icon">
+                  <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
             </ul>
@@ -137,9 +147,9 @@
         </div>
       </div>
     </footer>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="src/js/app.js" defer></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
