--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
 
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
-    <title>KingDomfy - Inscrever-se</title>
-    <link rel="icon" href="src/imagens/favicon.png">
+    <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
+    <title>KingDomfy - Para Marcas</title>
+    <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
   <body>
     <header> 
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
-          <a href="index.html" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100">
+          <a href="../index.html" class="navbar-brand">
+          <img src="../src/imagens/KingDomfy.png" width="100">
           </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <i class="fas fa-bars text-white"></i>
@@ -51,30 +51,15 @@
       </nav>
     </header> 
 
-    <section id="inscrever-se" class="caixa">
+    <section id="marcas" class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Inscreva-se grátis para começar a curtir.</h2>
-                    <form>
-                      <div class="form-group">
-                        <label for="email">Qual o seu e-mail?</label>
-                        <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail.">
-                      </div>
-                      <div class="form-group">
-                        <label for="confirmar-email">Confirme seu e-mail</label>
-                        <input type="email" class="form-control" id="confirmar-email" placeholder="Insira o e-mail novamente.">
-                      </div>
-                      <div class="form-group">
-                        <label for="senha">Crie uma senha</label>
-                        <input type="password" class="form-control" id="senha" placeholder="Crie uma senha.">
-                      </div>
-                      <div class="form-group">
-                        <label for="nome">Como devemos chamar você?</label>
-                        <input type="text" class="form-control" id="nome" placeholder="Insira um nome de perfil.">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Inscrever-se</button>
-                    </form>
+                    <h2>Para Marcas</h2>
+                    <p>Alcance milhões de pessoas que estão ouvindo o que amam. O KingDomfy para Marcas te ajuda a se conectar com seu público.</p>
+                    <a href="" class="btn btn-lg btn-custom btn-roxo">
+                      SAIBA MAIS
+                    </a>
                 </div>
             </div>
         </div>
@@ -137,17 +122,17 @@
             <ul class="social-media-icons">
               <li>
                 <a href="">
-                  <img src="src/imagens/facebook.png" class="social-icon">
+                  <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/twitter.png" class="social-icon">
+                  <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="src/imagens/instagram.png" class="social-icon">
+                  <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
             </ul>
@@ -155,9 +140,9 @@
         </div>
       </div>
     </footer>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="src/js/app.js" defer></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../src/js/app.js" defer></script>
   </body>
 </html>
