--- a/pages/ajuda.html
+++ b/pages/ajuda.html
@@ -51,12 +51,14 @@
       </nav>
     </header> 
 
-    <section id="ajuda" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Ajuda</h2>
-                    <p>Precisa de ajuda? Consulte nossa seção de perguntas frequentes ou entre em contato com nosso suporte.</p>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Ajuda</h2>
+                        <p>Precisa de ajuda? Consulte nossa seção de perguntas frequentes ou entre em contato com nosso suporte.</p>
+                    </div>
                 </div>
             </div>
         </div>
