--- a/pages/aplicativo-movel-gratis.html
+++ b/pages/aplicativo-movel-gratis.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="aplicativo-movel-gratis" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Aplicativo Móvel Grátis</h2>
-                    <p>Leve o KingDomfy com você. Baixe o aplicativo grátis para celular e tablet.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      BAIXE O APLICATIVO
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Aplicativo Móvel Grátis</h2>
+                        <p>Leve o KingDomfy com você. Baixe o aplicativo grátis para celular e tablet.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          BAIXE O APLICATIVO
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
