--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="artistas" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Para Artistas</h2>
-                    <p>Compartilhe sua música com o mundo. O KingDomfy para Artistas te dá as ferramentas para alcançar seus fãs.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      SAIBA MAIS
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Para Artistas</h2>
+                        <p>Compartilhe sua música com o mundo. O KingDomfy para Artistas te dá as ferramentas para alcançar seus fãs.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          SAIBA MAIS
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
