--- a/pages/baixar.html
+++ b/pages/baixar.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="baixar" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Baixar KingDomfy</h2>
-                    <p>Leve suas músicas para todo lugar. Baixe o KingDomfy no seu celular ou computador.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      BAIXAR
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Baixar KingDomfy</h2>
+                        <p>Leve suas músicas para todo lugar. Baixe o KingDomfy no seu celular ou computador.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          BAIXAR
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
