--- a/pages/desenvolvedores.html
+++ b/pages/desenvolvedores.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="desenvolvedores" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Para Desenvolvedores</h2>
-                    <p>Crie experiências incríveis com a nossa API. A plataforma KingDomfy para Desenvolvedores te dá acesso a milhões de músicas.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      COMECE A CRIAR
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Para Desenvolvedores</h2>
+                        <p>Crie experiências incríveis com a nossa API. A plataforma KingDomfy para Desenvolvedores te dá acesso a milhões de músicas.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          COMECE A CRIAR
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
