--- a/pages/empregos.html
+++ b/pages/empregos.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="empregos" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Trabalhe Conosco</h2>
-                    <p>Faça parte da nossa equipe e ajude a construir o futuro da música.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      VER VAGAS
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Trabalhe Conosco</h2>
+                        <p>Faça parte da nossa equipe e ajude a construir o futuro da música.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          VER VAGAS
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
