--- a/pages/imprensa.html
+++ b/pages/imprensa.html
@@ -51,12 +51,14 @@
       </nav>
     </header> 
 
-    <section id="imprensa" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Imprensa</h2>
-                    <p>Para consultas de imprensa, entre em contato com nossa equipe de comunicação.</p>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Imprensa</h2>
+                        <p>Para consultas de imprensa, entre em contato com nossa equipe de comunicação.</p>
+                    </div>
                 </div>
             </div>
         </div>
