--- a/pages/inscrever-se.html
+++ b/pages/inscrever-se.html
@@ -51,30 +51,32 @@
       </nav>
     </header> 
 
-    <section id="inscrever-se" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Inscreva-se grátis para começar a curtir.</h2>
-                    <form>
-                      <div class="form-group">
-                        <label for="email">Qual o seu e-mail?</label>
-                        <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail.">
-                      </div>
-                      <div class="form-group">
-                        <label for="confirmar-email">Confirme seu e-mail</label>
-                        <input type="email" class="form-control" id="confirmar-email" placeholder="Insira o e-mail novamente.">
-                      </div>
-                      <div class="form-group">
-                        <label for="senha">Crie uma senha</label>
-                        <input type="password" class="form-control" id="senha" placeholder="Crie uma senha.">
-                      </div>
-                      <div class="form-group">
-                        <label for="nome">Como devemos chamar você?</label>
-                        <input type="text" class="form-control" id="nome" placeholder="Insira um nome de perfil.">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Inscrever-se</button>
-                    </form>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Inscreva-se grátis para começar a curtir.</h2>
+                        <form>
+                          <div class="form-group">
+                            <label for="email">Qual o seu e-mail?</label>
+                            <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail.">
+                          </div>
+                          <div class="form-group">
+                            <label for="confirmar-email">Confirme seu e-mail</label>
+                            <input type="email" class="form-control" id="confirmar-email" placeholder="Insira o e-mail novamente.">
+                          </div>
+                          <div class="form-group">
+                            <label for="senha">Crie uma senha</label>
+                            <input type="password" class="form-control" id="senha" placeholder="Crie uma senha.">
+                          </div>
+                          <div class="form-group">
+                            <label for="nome">Como devemos chamar você?</label>
+                            <input type="text" class="form-control" id="nome" placeholder="Insira um nome de perfil.">
+                          </div>
+                          <button type="submit" class="btn btn-primary">Inscrever-se</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
