--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="marcas" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Para Marcas</h2>
-                    <p>Alcance milhões de pessoas que estão ouvindo o que amam. O KingDomfy para Marcas te ajuda a se conectar com seu público.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      SAIBA MAIS
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Para Marcas</h2>
+                        <p>Alcance milhões de pessoas que estão ouvindo o que amam. O KingDomfy para Marcas te ajuda a se conectar com seu público.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          SAIBA MAIS
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
