--- a/pages/novidades.html
+++ b/pages/novidades.html
@@ -51,12 +51,14 @@
       </nav>
     </header> 
 
-    <section id="novidades" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Novidades</h2>
-                    <p>Fique por dentro das últimas notícias e atualizações do KingDomfy.</p>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Novidades</h2>
+                        <p>Fique por dentro das últimas notícias e atualizações do KingDomfy.</p>
+                    </div>
                 </div>
             </div>
         </div>
