--- a/pages/player-da-web.html
+++ b/pages/player-da-web.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="player-da-web" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Player da Web</h2>
-                    <p>Ouça o KingDomfy diretamente no seu navegador. Não é preciso baixar nada.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      ABRIR PLAYER DA WEB
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Player da Web</h2>
+                        <p>Ouça o KingDomfy diretamente no seu navegador. Não é preciso baixar nada.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          ABRIR PLAYER DA WEB
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
