--- a/pages/premium.html
+++ b/pages/premium.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="premium" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>KingDomfy Premium</h2>
-                    <p>Ouça música sem anúncios, offline e com qualidade de som superior.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      ASSINE O PREMIUM
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>KingDomfy Premium</h2>
+                        <p>Ouça música sem anúncios, offline e com qualidade de som superior.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          ASSINE O PREMIUM
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
