--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -51,13 +51,15 @@
       </nav>
     </header> 
 
-    <section id="sobre" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Sobre Nós</h2>
-                    <p>O KingDomfy é uma plataforma de streaming de música que oferece milhões de músicas para você ouvir. Nossa missão é levar música para todos, em qualquer lugar.</p>
-                    <p>Fomos fundados em 2023 com a paixão de conectar artistas e fãs. Acreditamos no poder da música para unir pessoas e inspirar momentos inesquecíveis.</p>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Sobre Nós</h2>
+                        <p>O KingDomfy é uma plataforma de streaming de música que oferece milhões de músicas para você ouvir. Nossa missão é levar música para todos, em qualquer lugar.</p>
+                        <p>Fomos fundados em 2023 com a paixão de conectar artistas e fãs. Acreditamos no poder da música para unir pessoas e inspirar momentos inesquecíveis.</p>
+                    </div>
                 </div>
             </div>
         </div>
