--- a/pages/entrar.html
+++ b/pages/entrar.html
@@ -51,22 +51,24 @@
       </nav>
     </header> 
 
-    <section id="entrar" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Para continuar, entre no KingDomfy.</h2>
-                    <form>
-                      <div class="form-group">
-                        <label for="email">Endereço de e-mail ou nome de usuário</label>
-                        <input type="email" class="form-control" id="email" placeholder="Endereço de e-mail ou nome de usuário">
-                      </div>
-                      <div class="form-group">
-                        <label for="senha">Senha</label>
-                        <input type="password" class="form-control" id="senha" placeholder="Senha">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Entrar</button>
-                    </form>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Para continuar, entre no KingDomfy.</h2>
+                        <form>
+                          <div class="form-group">
+                            <label for="email">Endereço de e-mail ou nome de usuário</label>
+                            <input type="email" class="form-control" id="email" placeholder="Endereço de e-mail ou nome de usuário">
+                          </div>
+                          <div class="form-group">
+                            <label for="senha">Senha</label>
+                            <input type="password" class="form-control" id="senha" placeholder="Senha">
+                          </div>
+                          <button type="submit" class="btn btn-primary">Entrar</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
