--- a/pages/suporte.html
+++ b/pages/suporte.html
@@ -51,15 +51,17 @@
       </nav>
     </header> 
 
-    <section id="suporte" class="caixa">
+    <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Suporte</h2>
-                    <p>Como podemos ajudar? Encontre respostas para suas perguntas em nossa Central de Ajuda.</p>
-                    <a href="" class="btn btn-lg btn-custom btn-roxo">
-                      CENTRAL DE AJUDA
-                    </a>
+            <div class="conteudo-interno">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Suporte</h2>
+                        <p>Como podemos ajudar? Encontre respostas para suas perguntas em nossa Central de Ajuda.</p>
+                        <a href="" class="btn btn-lg btn-custom btn-roxo">
+                          CENTRAL DE AJUDA
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
